attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743842195824.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/BaseInterpreter.cpp.o
In file included from /home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:1:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h: In constructor ‘ai_language::BaseInterpreter::BaseInterpreter()’:
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h:98:9: warning: ‘ai_language::BaseInterpreter::timezone’ will be initialized after [-Wreorder]
   98 |     int timezone; // Timezone offset from UTC
      |         ^~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h:42:10: warning:   ‘bool ai_language::BaseInterpreter::safeMode’ [-Wreorder]
   42 |     bool safeMode; // ถ้าเป็น true จะรอการยืนยันก่อนทำงานคำสั่ง
      |          ^~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/BaseInterpreter.cpp:8:1: warning:   when initialized here [-Wreorder]
    8 | BaseInterpreter::BaseInterpreter() : hasStarted(false), hasCreated(false), hasLoaded(false),
      | ^~~~~~~~~~~~~~~
[ 12%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o
[ 18%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/DLInterpreter.cpp.o
[ 25%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/RLInterpreter.cpp.o
[ 31%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/InterpreterFactory.cpp.o
[ 37%] Linking CXX static library libai_language_lib.a
[ 75%] Built target ai_language_lib
[ 87%] Built target show_time
[ 93%] Building CXX object CMakeFiles/ai_lang.dir/src/ai_lang.cpp.o
/home/runner/workspace/ai_language/src/ai_lang.cpp: In function ‘void ai_language::runInteractiveMode()’:
/home/runner/workspace/ai_language/src/ai_lang.cpp:146:45: error: ‘void ai_language::BaseInterpreter::setSafeMode(bool)’ is protected within this context
  146 |                     interpreter->setSafeMode(true);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /home/runner/workspace/ai_language/src/../include/interpreters/InterpreterFactory.h:5,
                 from /home/runner/workspace/ai_language/src/ai_lang.cpp:1:
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:88:10: note: declared protected here
   88 |     void setSafeMode(bool enabled);
      |          ^~~~~~~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:150:45: error: ‘void ai_language::BaseInterpreter::setSafeMode(bool)’ is protected within this context
  150 |                     interpreter->setSafeMode(false);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/runner/workspace/ai_language/src/../include/interpreters/BaseInterpreter.h:88:10: note: declared protected here
   88 |     void setSafeMode(bool enabled);
      |          ^~~~~~~~~~~
/home/runner/workspace/ai_language/src/ai_lang.cpp:243:42: error: ‘class ai_language::BaseInterpreter’ has no member named ‘getSafeMode’; did you mean ‘setSafeMode’?
  243 |                         if (interpreter->getSafeMode()) {
      |                                          ^~~~~~~~~~~
      |                                          setSafeMode
/home/runner/workspace/ai_language/src/ai_lang.cpp:273:38: error: ‘class ai_language::BaseInterpreter’ has no member named ‘getSafeMode’; did you mean ‘setSafeMode’?
  273 |                     if (interpreter->getSafeMode()) {
      |                                      ^~~~~~~~~~~
      |                                      setSafeMode
make[2]: *** [CMakeFiles/ai_lang.dir/build.make:76: CMakeFiles/ai_lang.dir/src/ai_lang.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/ai_lang.dir/all] Error 2
make: *** [Makefile:91: all] Error 2